--- a/estiles.css
+++ b/estiles.css
@@ -2,7 +2,7 @@
     margin: 0; padding: 0; box-sizing: border-box; color: #fff; font-family: Arial, Helvetica, sans-serif;
 }
 body{
-    background-color: red;
+    background-color: black;
 }
 h3{
     margin-bottom: 25px;
